fixed flex wrap problem with Safari

--- a/style.css
+++ b/style.css
@@ -320,6 +320,8 @@ img.in-text-top-left {
 	padding: 10px;
 	min-width: 280px;
 	max-width: 600px;
+	-webkit-flex: 1 1 280px;
+	//-webkit-flex-basis: auto;
 }
 
 
